# jaguar_measure

./: .gitattributes  .gitignore  .~lock.scan_results.xlsx#  CMakeLists.txt  T9P3-10T800-A-INS-01 FOAM BRACKET TYPE 01 FEV 16.1 Frozen.stl  main.cpp  profiler_utils.py
Measure/: Main.py  Main_alt.py  big_circle1.py  test.py
Measure/MecheyePackage/: LaserOn.py  Main.py  __init__.py  edges.py  mecheye_trigger.py  points.py  robot_control.py  scan.py
Measure/Scripts/: __init__.py  arm_horn_lengths.py  big_circle1.py  bigcircle2_refcloud.py  edges.py  kaydırak_big_scan.py  lengths.py
flask-react-app/: docker-compose.yaml  scan_output.json  start.sh  start_server.sh
flask-react-app/Measure/: dir_test.py  robot_moves.py  test.py
flask-react-app/Measure/MecheyePackage/: Main.py  config.json  config.py  mecheye_trigger.py  points.py  robot_control.py  scan.py  test.py
flask-react-app/Measure/Scripts/: big_circle1.py  edges.py  lengths.py  slope.py
flask-react-app/backend/: .env  Dockerfile  __init__.py  app.py  config.py  processed_data.json  requirements.txt  robot_data.json  run.py  scan_output.json
flask-react-app/backend/.devcontainer/: Dockerfile  devcontainer.json
flask-react-app/backend/MecheyePackage/: Main.py  backup.py  (+8 more)
flask-react-app/frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
scripts/: MSTFHOCAPART.py  Sor_filter.py  bin_extract.py  ccompare.py  circle_visualization3d.py  cloud_to_cloud.py  mesh_to_ply.py  mirror.py  ply_to_stl.py  ransac.py  rotate_cloud.py  triangle.py  z_score.py
(+51 files in other folders)
